spacing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ main .contact-button {
 }
 main p {
 	font-size: .73rem;
-    margin: 0 0 1.5rem 1rem;
+    margin: 0 0 2.25rem 1rem;
 	padding-top: .5rem;
 }
 main h1 {
